<resources>
    <string name="app_name">PingPong</string>
    <string name="action_finish_match">Finish match</string>
    <string name="action_history">History</string>
    <string name="action_delete_match">Delete match</string>
    <string name="action_exit">Exit</string>

    <string name="btnPlayers">Players</string>
    <string name="btnGames">Games</string>
    <string name="btnStatistics">Statistics</string>
    <string name="btnAddPlayers">Add players</string>
    <string name="btnNewPlayer">New player</string>
    <string name="btnOk" translatable="false">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="btnDelete">Delete</string>
    <string name="btnYes">Yes</string>
    <string name="btnStartMatch">Start match</string>
    <string name="btnAddGame">Add game</string>
    <string name="btnPlayer1WinsContentDescription" translatable="false">Player1 wins</string>
    <string name="btnPlayer2WinsContentDescription" translatable="false">Player2 wins</string>
    <string name="btnNewPlayerContentDescription" translatable="false">New Player</string>

    <string name="titleEditGame">Edit game</string>
    <string name="titleDeleteGame">Delete game</string>
    <string name="titleTooFewPlayers">Too few players</string>
    <string name="titleSaveError">Save error</string>

    <string name="toastAlreadySelected">Player already exists and selected</string>
    <string name="toastSelectNow">Player already exists and will be selected</string>

    <string name="msgConfirmFinishMatch">Do you want to finish the match?</string>
    <string name="msgConfirmDeleteGame">Do you want to delete this game?</string>
    <string name="msgConfirmEditGame">Do you want to change results of this game?</string>
    <string name="msgConfirmChangeDateTime">You are going to change date or time of game. Do you really want to do it?</string>
    <string name="msgConfirmDeleteMatch">Do you really want to delete the WHOLE match from history?</string>
    <string name="msgAtLeastTwoPlayersRequired">At least two player required for play game</string>
    <string name="msgAtLeastTwoPlayersShouldBeSelectedOnPlayersTab">At least two player should be selected on Players tab</string>
    <string name="msgDateTimeFormatError">Error in format of Date/Time</string>
    <string name="msgSaveError">Save error of game results into database</string>

    <string name="semicolon" translatable="false">:</string>
    <string name="lnkGoToPlayersTab">Go to Players tab</string>
    <string name="checkBoxAllMatches">All matches</string>

    <string name="fullDateFormat">MM/dd/yyyy HH:mm:ss</string>
    <string name="shortDateFormat">HH:mm:ss</string>
    <string name="byGamesFormat">%1$d : %2$d (%3$.1f%% : %4$.1f%%), total %5$d</string>
    <string name="byScoresFormat">%1$d : %2$d, total %3$d</string>

    <string name="total">Total</string>
    <string name="byGames">Games:</string>
    <string name="byScores">Scores:</string>
    <string name="averageScore">Average scores:</string>
    <string name="totalGames">Total games: %d</string>
    <string name="totalScores">Total scores: %d</string>
</resources>
