<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byGames"
            android:layout_marginRight="8sp"
            android:layout_marginEnd="8sp"
            android:id="@+id/textByGames"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/statByGames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byScores"
            android:layout_marginRight="8sp"
            android:layout_marginEnd="8sp"
            android:id="@+id/textByScores"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/statByScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/averageLine">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averageScore"
            android:layout_marginRight="8sp"
            android:layout_marginEnd="8sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/statAverageScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>