<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8sp"
    android:gravity="center_vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartMatch"
        android:id="@+id/btnStartMatch"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginBottom="8sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/llGamesLayout">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/lvGames"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8sp"
            android:id="@+id/llMsgTooFewPlayers"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgAtLeastTwoPlayersRequired"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lnkGoToPlayersTab"
                android:text="@string/lnkGoToPlayersTab"
                android:layout_marginTop="8sp"
                android:textSize="16sp"
                android:textColor="@color/blue" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAddNewGame">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="@color/material_grey_600"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="4sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/spPlayer1"
                            android:layout_weight="1"
                            android:layout_margin="2sp" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16sp"
                            android:layout_marginRight="16sp" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/spPlayer2"
                            android:layout_weight="1"
                            android:layout_margin="2sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageButton
                            android:layout_width="48sp"
                            android:layout_height="48sp"
                            android:src="@drawable/ic_thumb_up_black_24dp"
                            android:layout_margin="2sp"
                            android:contentDescription="@string/btnPlayer1WinsContentDescription"
                            android:id="@+id/btnPlayer1Wins" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etScore1"
                            android:layout_weight="1"
                            android:layout_margin="2sp"
                            android:inputType="number"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/semicolon"
                            android:layout_marginLeft="16sp"
                            android:layout_marginRight="16sp" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/etScore2"
                            android:layout_weight="1"
                            android:layout_margin="2sp"
                            android:inputType="number"
                            android:gravity="center_horizontal" />

                        <ImageButton
                            android:layout_width="48sp"
                            android:layout_height="48sp"
                            android:src="@drawable/ic_thumb_up_black_1_24dp"
                            android:layout_margin="2sp"
                            android:contentDescription="@string/btnPlayer2WinsContentDescription"
                            android:id="@+id/btnPlayer2Wins" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="2sp"
                    android:layout_height="match_parent"
                    android:layout_margin="4sp"
                    android:background="@color/material_grey_600" />

                <ImageButton
                    android:layout_width="64sp"
                    android:layout_height="64sp"
                    android:id="@+id/btnSave"
                    android:src="@drawable/ic_save_black_24dp"
                    android:layout_margin="4sp"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>